--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,7 +450,7 @@ header .navbar ul li a:hover {
 /* skills section starts */
 .skills {
   min-height: 90vh;
-  background: linear-gradient(to bottom, #57059e, #4a00e0);
+  background: linear-gradient(to bottom, #6042da, #e07653);
 }
 .skills h2 {
   color: #fff;
