--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ header .navbar ul li a:hover {
 
 /* about section starts */
 .about {
-  background: rgb(200, 200, 200);
+  background: linear-gradient(to top, #e5e5ec, #f9f5f5, #91968c );
 }
 .about .row {
   display: flex;
