--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ header {
   justify-content: space-between;
   padding: 1.7rem 10%;
   height: 6.5rem;
-  background-color: #fff;
+  background-color: #dbf;
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.3);
 }
 section {
